2015-02-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Add check for infinite recursive call of copyAst().

2015-01-30 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix references to obsolete keywords.

2015-01-29 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Reorganize documentation of language extensions, in particular named address spaces, separate mcs51isms, remove references to obsolete keywords.

2015-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update documentation on C dialect selection.

2015-01-27 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCsymt.c:
	  Fix bug #2349.
	* support/regression/test/bug-2349.c:
	  Add a new test for bug #2349.

2015-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCmem.c,
	  src/SDCCsymt.h,
	  src/stm8/main.c:
	  Apply patch by Pascal for trap handlers.

2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/stm8/gen.c:
	  Fix a bug in genPointerGet(): negative offset is not handled correctly.
	* support/regression/test/bug-2239.c:
	  More tests are added and enabled for stm8.

2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Fix bug #2239.
	* support/regression/test/bug-2239.c:
	  Add a new test for bug #2239.

2015-01-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  .version:
	  Make sdcc dialect of C99 the default.

2015-01-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.c,
	  src/mcs51/ralloc.c:
	  Fix register packing inline asm interaction bugs #2346, #2268.

2015-01-09 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Classification macros are not required in freestanding implementations.

2015-01-08 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCC.y:
	  Fix a bug which might be a NULL pointer access.
	* device/lib/time.c:
	  Eliminate a warning. (overflow in implicit constant conversion)
